# badgie

./: README.md  com.github.rajkumaar23.badgie.yml  meson.build
.github/workflows/: ci.yml  release.yml
data/: com.github.rajkumaar23.badgie.appdata.xml  com.github.rajkumaar23.badgie.appdata.xml.in  com.github.rajkumaar23.badgie.desktop  com.github.rajkumaar23.badgie.desktop.in  meson.build
debian/: changelog  control  copyright
po/: com.github.rajkumaar23.badgie.pot  fr.po  it.po  nl.po  pt.po  tr.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  it.po  nl.po  pt.po  tr.po
src/: Application.vala  MainWindow.vala
